# progbase-samples

./: .gitignore  README.md  snippets.json
collections/: int_list.h  linked_list.c  list.c  list.h  main_list.c
cpp/: main.cpp
cpp/qt-SampleLecListAndTable/: SampleLecListAndTable.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/qt-TableSample/: TableSample.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/qt-inter-windows/: InterWindows.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  outputform.cpp  outputform.ui
cpp/qt-sample-1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-sample-1.pro  student.cpp  student.h
cpp/qt-timer-dialog-menu/: QTimerLab.pro  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
formats/csv/: Makefile  main.c
formats/json/: Makefile  main.c  students.json
formats/xml/: CMakeLists.txt  Makefile  main.c  students.xml
formats/xml/include/: storage.h
lectures/daemons/: CMakeLists.txt  main.cpp
lectures/lecture-01/: Doxyfile  README.md  main.c
lectures/lecture-01/include/: http.h  socket.h  web.h
lectures/lecture-01/src/: http.c  socket.c  web.c
lectures/threads/: CMakeLists.txt  main.cpp
lectures/threads/include/: graphics.h
lectures/threads/src/: graphics.cpp
libraries/: Makefile  main.c
libraries/c/: main-dyn.c
libraries/c/staticlib/: lib.c
libraries/cpp-after/libruslan/: CMakeLists.txt  dynarray.h  list.h
libraries/cpp-after/project/: CMakeLists.txt  main.cpp
libraries/cpp-before/: CMakeLists.txt  dynarray.cpp  list.cpp  main.cpp
libraries/staticlib/: lib.h
misc/: qsort.c
parse/csv/: CMakeLists.txt  lexer.c  lexer.h  list.c  main.c  parser.c  parser.h  token.c  token.h
practices/2017/: README.md
practices/2017/10/: arrOperations.c  bookApp.c
practices/2017/3/: conditions.c  console_paint.c  random_and_loops.c  triangle.c
practices/2017/4/: matrix.c  nsFrom10.c  nsTo10.c  paint4.c  sumNumbers.c
practices/2017/5/: bitwiseBitCounter.c
practices/2017/6/: arraySwaps3.c  rot45.c  shiftArrLeft.c  sinFloats.c  sortNegativeNumbers.c  swapHor.c
practices/2017/7/: nsFrom10.c  randCharArr.c  strSplit.c  strWords.c  stringCharMod.c
practices/2017/8/: words.c
practices/2017/9/: arrayFunctions.c  simpleFunc.c  strFunc.c  triaFunc.c  (+1 more)
practices/2018/pr3/81/: CMakeLists.txt  list.c  main.c  queue.c  queue.h
practices/2018/pr7/82/program/: CMakeLists.txt  main.c
practices/2018/static_lib/81/: CMakeLists.txt  main.c
practices/2018/static_lib/81/mylist/: list.c
practices/QtSqlite/: QtSqlite.pro  main.cpp
practices/cppio/: main.cpp
practices/eventloop/: CMakeLists.txt  Doxyfile  README.md  main.c
practices/eventsystemcpp/: CMakeLists.txt  main.cpp
practices/https-client/: client.c
practices/lab1/: Makefile  convert.c  convert.h  list.c  list.h  main.c  storage.c  storage.h
practices/libmycsv/: CMakeLists.txt  main.c  out.csv  students.csv
practices/registerAndLogin/: logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  storage.cpp  storage.h  user.h  users73.pro
practices/tcp-server/: CMakeLists.txt  client.c  client.c.save
practices/udp-server/: CMakeLists.txt  client.c  server.c
practices/udp-server/kp61/: client_old.c
practices/unit-tests/: Makefile  list.c  list.h  module.c  module.h
practices/xml/: CMakeLists.txt  main.c  students.xml
practices/xml/src/: csv.c
recursion/: rec_tree.c  rec_triangle.c
tasks/dynamic_int_list/: dynarray.c  dynarray.h  main.c
tasks/intlist/: build.sh  intlist.c  intlist.h  main.c
tasks/nlp-sample/: list.c  main.c  numbers.c  numbers.h  storage.c  storage.h
tasks/ref-count/: Makefile  list.c  list.h  main.c  numbers.c  object.c  object.h  storage.c  storage.h
tasks/tcp_client/: CMakeLists.txt  handlers.c  main.c
tests/: pb2-kr2-training.md
videos/static_lib_sample/: README.md
videos/static_lib_sample/program/: CMakeLists.txt  main.c
(+174 files in other folders)
